infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
# describes how the deployment should behave
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  # describes how every pod that is created and managed by the
  # deployment. The selector (above) and metadata (below) is data
  # the deployment uses to find the pods it is supposed to manage
  template:
    metadata:
      labels:
        app: client
    # describes how every pod should behave
    spec:
      containers:
        - name: client
          image: us.gcr.io/zenith-dev-303000/client
---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector:
    app: client
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
