infra/k8s/orders-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-depl
# describes how the deployment should behave
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders
  # describes how every pod that is created and managed by the
  # deployment. The selector (above) and metadata (below) is data
  # the deployment uses to find the pods it is supposed to manage
  template:
    metadata:
      labels:
        app: orders
    # describes how every pod should behave
    spec:
      containers:
        - name: orders
          image: us.gcr.io/zenith-dev-303000/orders
---
apiVersion: v1
kind: Service
metadata:
  name: orders-srv
spec:
  selector:
    app: orders
  ports:
    - name: orders
      protocol: TCP
      port: 3000
      targetPort: 3000
